Use a more perfomant way to ensure spacing between card children

--- a/src/Components/ResourceList/Card/ResourceCard.scss
+++ b/src/Components/ResourceList/Card/ResourceCard.scss
@@ -5,6 +5,8 @@
   ------------------------------------------------------------------------------
 */
 
+$resource-card--row-gap: $cf-marg-a - ($cf-border / 2);
+
 .resource-card {
   width: 100%;
 }
@@ -12,31 +14,33 @@
 .resource-card,
 .resource-card--contents {
   display: flex;
-  flex-direction: column;
 }
 
 .resource-card {
+  flex-direction: row;
+  align-items: stretch;
   position: relative;
   color: $g13-mist;
   background-color: $g3-castle;
   border-radius: $cf-radius;
   padding: $cf-marg-b $cf-marg-c;
+  padding-bottom: $cf-marg-b - $resource-card--row-gap;
   margin-bottom: $cf-border;
   transition: background-color 0.25s ease, color 0.25s ease;
-
+  
   &:hover {
     color: $g16-pearl;
     background-color: $g4-onyx;
   }
-
-  &.resource-card__toggleable {
-    flex-direction: row;
-    align-items: stretch;
-  }
 }
 
 .resource-card--contents {
+  flex-direction: column;
   flex: 1 0 0;
+}
+
+.resource-card--row {
+  margin-bottom: $resource-card--row-gap;
 }
 
 .resource-list--toggle {
@@ -49,6 +53,7 @@
   font-size: $form-xs-font;
   font-weight: 600;
   color: $g11-sidewalk;
+  padding-bottom: $cf-border;
 }
 
 .resource-list--meta-item {
