--- a/src/Components/ResourceList/Card/ResourceCardDescription.scss
+++ b/src/Components/ResourceList/Card/ResourceCardDescription.scss
@@ -24,6 +24,7 @@
 }
 
 .resource-description--preview {
+  padding-top: $cf-marg-a;
   width: auto;
   display: inline-block;
   border-radius: $cf-radius;
