--- a/src/Components/ResourceList/Card/ResourceCardEditableName.scss
+++ b/src/Components/ResourceList/Card/ResourceCardEditableName.scss
@@ -26,7 +26,6 @@ $resource-name-font-weight: 600;
   position: relative;
   display: inline-flex;
   flex-wrap: nowrap;
-  margin-bottom: $cf-marg-a;
 }
 
 .input.resource-editable-name--input {
